SintaticAnalyzer/Lovelace.java
/* Generated By:JavaCC: Do not edit this line. Lovelace.java */
import java.io.*;
public class Lovelace implements LovelaceConstants {

  public static void main(String args[]) throws ParseException,IOException {

        Lovelace analisador = new Lovelace(new FileInputStream(args[0]));
        try {
        analisador.Lovelace(); // Chama a regra inicial da gramática
                System.out.println("Analise sintatica concluida com sucesso.");
        } catch (ParseException e) {
                System.err.println("Erro sintatico: " + e.getMessage());
        }
  }

/* LOVELACE -> MAIN FUNC? */
  static final public void Lovelace() throws ParseException {
    Main();
    Func();
    jj_consume_token(0);
  }

/* MAIN -> "main" "("")" "begin" VARDECL SEQCOMANDOS "end" */
  static final public void Main() throws ParseException {
    jj_consume_token(MAIN);
    jj_consume_token(APAR);
    jj_consume_token(FPAR);
    jj_consume_token(BEGIN);
    VarDecl();
    SeqComandos();
    jj_consume_token(END);
  }

/* * VARDECL -> VARDECL "let" TIPO TOKEN_id ";" | vazio
 * Removida recursão à esquerda: ( "let" TIPO ID ";" )*
 */
  static final public void VarDecl() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LET:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      jj_consume_token(LET);
      Tipo();
      jj_consume_token(ID);
      jj_consume_token(PV);
    }
  }

/* TIPO -> "Float" | "Bool" | "Void" */
  static final public void Tipo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FLOAT:
      jj_consume_token(FLOAT);
      break;
    case BOOL:
      jj_consume_token(BOOL);
      break;
    case VOID:
      jj_consume_token(VOID);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/* * SEQCOMANDOS -> SEQCOMANDOS COMANDO | vazio
 * Removida recursão à esquerda: ( COMANDO )*
 */
  static final public void SeqComandos() throws ParseException {
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BEGIN:
      case PRINT:
      case IF:
      case WHILE:
      case RETURN:
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      Comando();
    }
  }

/*
 * COMANDO -> (diversas opções)
 * Resolvida ambiguidade do TOKEN_id com fatoração.
 
 * Fatoração das regras que começam com <ID>:
 * 1. TOKEN_id ":=" EXP ";"
 * 2. TOKEN_id "(" LISTAEXP? ")" ";"
 * 3. TOKEN_id ":=" "read" "(" ")" ";"
*/
  static final public void Comando() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ATR:
        jj_consume_token(ATR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case READ:
          jj_consume_token(READ);
          jj_consume_token(APAR);
          jj_consume_token(FPAR);
          jj_consume_token(PV);
          break;
        case APAR:
        case TRUE:
        case FALSE:
        case NUMLITERAL:
        case ID:
          Exp();
          jj_consume_token(PV);
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      case APAR:
        jj_consume_token(APAR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case APAR:
        case TRUE:
        case FALSE:
        case NUMLITERAL:
        case ID:
          ListaExp();
          break;
        default:
          jj_la1[4] = jj_gen;
          ;
        }
        jj_consume_token(FPAR);
        jj_consume_token(PV);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case IF:
      jj_consume_token(IF);
      Exp();
      jj_consume_token(BEGIN);
      SeqComandos();
      jj_consume_token(END);
      jj_consume_token(PV);
      break;
    case BEGIN:
      jj_consume_token(BEGIN);
      SeqComandos();
      jj_consume_token(END);
      jj_consume_token(PV);
      break;
    case WHILE:
      jj_consume_token(WHILE);
      Exp();
      jj_consume_token(BEGIN);
      SeqComandos();
      jj_consume_token(END);
      jj_consume_token(PV);
      break;
    case RETURN:
      jj_consume_token(RETURN);
      Exp();
      jj_consume_token(PV);
      break;
    case PRINT:
      jj_consume_token(PRINT);
      Exp();
      jj_consume_token(PV);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/* EXP -> "(" EXP OP EXP ")" | FATOR */
  static final public void Exp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case APAR:
      jj_consume_token(APAR);
      Exp();
      Op();
      Exp();
      jj_consume_token(FPAR);
      break;
    case TRUE:
    case FALSE:
    case NUMLITERAL:
    case ID:
      Fator();
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/* * FATOR -> TOKEN_id | TOKEN_id "(" LISTAEXP? ")" | TOKEN_numliteral | "true" | "false"
 * Resolvida ambiguidade do TOKEN_id com fatoração.
 */
  static final public void Fator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case APAR:
        jj_consume_token(APAR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case APAR:
        case TRUE:
        case FALSE:
        case NUMLITERAL:
        case ID:
          ListaExp();
          break;
        default:
          jj_la1[8] = jj_gen;
          ;
        }
        jj_consume_token(FPAR);
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      break;
    case NUMLITERAL:
      jj_consume_token(NUMLITERAL);
      break;
    case TRUE:
      jj_consume_token(TRUE);
      break;
    case FALSE:
      jj_consume_token(FALSE);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/* OP -> "+" | "-" | "*" | "/" | "&&" | "||" | "<" | ">" | "==" */
  static final public void Op() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SOMA:
      jj_consume_token(SOMA);
      break;
    case SUB:
      jj_consume_token(SUB);
      break;
    case MULT:
      jj_consume_token(MULT);
      break;
    case DIV:
      jj_consume_token(DIV);
      break;
    case AND:
      jj_consume_token(AND);
      break;
    case OR:
      jj_consume_token(OR);
      break;
    case MENOR:
      jj_consume_token(MENOR);
      break;
    case MAIOR:
      jj_consume_token(MAIOR);
      break;
    case IGUAL:
      jj_consume_token(IGUAL);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/* * LISTAEXP -> EXP | LISTAEXP "," EXP
 * Removida recursão à esquerda: EXP ( "," EXP )*
 */
  static final public void ListaExp() throws ParseException {
    Exp();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_3;
      }
      jj_consume_token(VIRGULA);
      Exp();
    }
  }

/* * FUNC -> FUNC "def" ... | "def" ... 
 * Removida recursão à esquerda: ( "def" ... )*
 */
  static final public void Func() throws ParseException {
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DEF:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_4;
      }
      jj_consume_token(DEF);
      Tipo();
      jj_consume_token(ID);
      jj_consume_token(APAR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FLOAT:
      case BOOL:
      case VOID:
        ListaArg();
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      jj_consume_token(FPAR);
      jj_consume_token(BEGIN);
      VarDecl();
      SeqComandos();
      jj_consume_token(END);
    }
  }

/* * LISTAARG -> TIPO TOKEN_id | LISTAARG "," TIPO TOKEN_id
 * Removida recursão à esquerda: TIPO ID ( "," TIPO ID )*
 */
  static final public void ListaArg() throws ParseException {
    Tipo();
    jj_consume_token(ID);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_5;
      }
      jj_consume_token(VIRGULA);
      Tipo();
      jj_consume_token(ID);
    }
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public LovelaceTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[16];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x40,0xe000,0x1e0200,0xc0000080,0x80000080,0x10080,0x1e0200,0x80000080,0x80000080,0x80,0x80000000,0x3fe00000,0x1000,0x0,0xe000,0x1000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x8,0xd,0xd,0x0,0x8,0xd,0xd,0x0,0xd,0x0,0x0,0x2,0x0,0x0,};
   }

  /** Constructor with InputStream. */
  public Lovelace(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Lovelace(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new LovelaceTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Lovelace(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new LovelaceTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Lovelace(LovelaceTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(LovelaceTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List jj_expentries = new java.util.ArrayList();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[36];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 16; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 36; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
